@@ -14,6 +14,7 @@
 * The Xbox Live feed is now properly encoding your username if it had spaces.
 * The lifestream_feedid_<N> class name is now the ID of the feed, and not the feed type.
 * Added Last Update column to feed list.
+* Added a setting for the number of items to display in the feed.
 
 0.93b
 
